--- a/assets/css/styleJames.css
+++ b/assets/css/styleJames.css
@@ -558,7 +558,7 @@ small {
 /* .teal */
 
 .teal {
-  background-color: #475053 !important;
+  background-color: #2e94b9 !important;
 }
 
 /* .teal {
