Changed info, removed education

--- a/assets/css/styleJames.css
+++ b/assets/css/styleJames.css
@@ -602,7 +602,7 @@ small {
     position: absolute;
   }
   nav a.button-collapse, nav a.button-collapse i {
-    color: #009688;
+    color: #2e94b9 !important;
     height: 56px;
     line-height: 56px;
   }
