--- a/assets/css/styleJames.css
+++ b/assets/css/styleJames.css
@@ -1,6 +1,6 @@
 .profile-pic {
   position: relative;
-  max-width:130px;
+  max-width:150px;
   max-height:130px;
   width: auto;
   height: auto;
@@ -237,7 +237,7 @@ ul.side-nav li {
 
 ul.side-nav.fixed a {
   box-sizing: content-box;
-  color: #2e94b9;
+  color: #2e94b9 !important;
   display: block;
   line-height: 100%;
   padding: 10px 0 12px;
