--- a/assets/css/styleJames.css
+++ b/assets/css/styleJames.css
@@ -11,7 +11,7 @@
   /* background-size: cover;  */
   margin: -31px; 
   margin-left:-7px;
-  border: 6px solid #acdcee !important; 
+  border: 6px solid #2e94b9 !important; 
 }
 
 .profile-pic img {
@@ -84,7 +84,7 @@
   position: relative;
   padding: 11px 35px;
   background: #fff;
-  color: #00796b;
+  color: #2e94b9;
   border: 2px solid #fff;
   font-weight: 600;
   font-size: 15px;
@@ -115,7 +115,7 @@
 }
 
 .contactme:hover{
-  color: #00796b;
+  color: #2e94b9;
   background-color: white;
 }
 /* main body */
