Changed Hi, I'm James Rota style.

--- a/assets/css/styleJames.css
+++ b/assets/css/styleJames.css
@@ -19,6 +19,11 @@
   height: auto;
 }
 
+#Introduction {
+  background-color: #f0fbff;
+  color: black
+}
+
 .tracker {
   /* visibility: hidden; */
   position: fixed;
