--- a/assets/css/styleJames.css
+++ b/assets/css/styleJames.css
@@ -19,10 +19,10 @@
   height: auto;
 }
 
-#Introduction {
+/* #Introduction {
   background-color: #f0fbff;
   color: black
-}
+} */
 
 .tracker {
   /* visibility: hidden; */
